[package]
name = "aocrust"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }
indoc = "2.0.5"
paste = "1.0.15"

[[bench]]
name = "bench_days"
harness = false
